--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container">
         <!-- Foto Profil -->
         <div class="profile-photo">
-        <p style="background-color: rgb(235, 70, 49);"><img src="ainin foto.jpeg" alt="ainin-foto"><span style="color: rgb(235, 70, 49);"><p align="center"> <h1>BIODATA SAYA</h1></p> <br> <span style="color: rgb(235, 70, 49);"> RAHMA QURROTA `AININ </span> <br> <span style="color: rgb(235, 70, 49);"> Halo nama saya Rahma Qurrota `Ainin. Kalian boleh memanggil saya Ainin. Saya berasal dari SMK Negeri 1 Bawang. Saya masuk jurusan Pengembangan Perangkat Lunak dan Gim (PPLG). Saya adalah orang yang pandai bergaul sehingga saya harap bisa berteman dengan kalian semua. Terima kasih </span></p>
+        <p style="background-color: rgb(235, 70, 49);"><img src="img/ainin.jpeg" alt="ainin-foto"><span style="color: rgb(235, 70, 49);"><p align="center"> <h1>BIODATA SAYA</h1></p> <br> <span style="color: rgb(235, 70, 49);"> RAHMA QURROTA `AININ </span> <br> <span style="color: rgb(235, 70, 49);"> Halo nama saya Rahma Qurrota `Ainin. Kalian boleh memanggil saya Ainin. Saya berasal dari SMK Negeri 1 Bawang. Saya masuk jurusan Pengembangan Perangkat Lunak dan Gim (PPLG). Saya adalah orang yang pandai bergaul sehingga saya harap bisa berteman dengan kalian semua. Terima kasih </span></p>
         </div>
          </P>
 
@@ -65,11 +65,11 @@
         <div class="section">
         <p style="background-color: rgb(235, 70, 49);"><h2>Pendidikan</h2>
             <p><strong>MI AL-FATAH:</strong></p>
-            <p><strong>Tahun Lulus:</strong> [2014 - 2020]</p><p align="right"> <img src="logo mi al fatah.jpg" alt="logo-mi al fatah">
+            <p><strong>Tahun Lulus:</strong> [2014 - 2020]</p><p align="right"> <img src="img/logosd.jpg" alt="logo-sd">
             <p><strong>SMP COKROAMINOTO</strong></p>
-            <p><strong>Tahun Lulus:</strong> [2020 - 2023]</p><p align="right"> <img src="logo smp cokroaminoto.jpg" alt="logo-smp cokroaminoto">
+            <p><strong>Tahun Lulus:</strong> [2020 - 2023]</p><p align="right"> <img src="img/logosmp.jpg" alt="logo-smp">
             <p><strong>SMK NEGERI 1 BAWANG</strong></p>
-            <p><strong>Tahun Lulus:</strong> [2023 - 2026]</p><p align="right"> <img src="logo smkn 1 bawang (2).jpg" alt="logo-smkn 1 bawang (2)">
+            <p><strong>Tahun Lulus:</strong> [2023 - 2026]</p><p align="right"> <img src="img/logosmk.jpg" alt="logo-smk">
             
         </div>
 
@@ -95,8 +95,8 @@
         <div class="section">
             <h2>Portofolio</h2>
             <ul class="portfolio">
-            <img src="portofolio ainin.png" alt="aportofolio ainin">
-            <img src="ERD.png" alt="ERD">
+            <img src="img/figma.png" alt="figma">
+            <img src="img/ERD.png" alt="ERD">
             </ul>
         </div>
 
