--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="section">
             <h2>Portofolio</h2>
             <ul class="portfolio">
-            <img src="img/figma.png" alt="figma">
-            <img src="img/ERD.png" alt="ERD">
+            <p>Membuat tiket pembelian DCF menggunakan figma</p><img src="img/figma.png" alt="figma">
+             <p>Membuat Relasion hubungan pada basis data menggunakan PHP/HEIDI</p><img src="img/ERD.png" alt="ERD">
             </ul>
         </div>
 
